2001-08-04  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* dlfcn/Makefile: Add rules for new testcase tststatic.
	* dlfcn/tststatic.c: New file.
	* dlfcn/modstatic.c: New file.

2001-08-04  Ulrich Drepper  <drepper@redhat.com>

	* manual/summary.awk: Fix value used for FF.

	* elf/rtld.c: Correct use of __builtin_expect.

	* elf/dl-close.c: Remove commented-out code.

	* libio/genops.c (_IO_unbuffer_write): Force streams in narrow
	orientation so that conversion modules aren't used anymore.
	* malloc/set-freeres.c: Call _IO_cleanup before running subfreeres
	functions to avoid using wide streams afterwards.

	* iconvdata/Makefile: Add rules to build GEORGIAN-PS and
	GEORGIAN-ACADEMY.
	* iconvdata/georgian-ps.c: New file.
	* iconvdata/georgian-academy.c: New file.
	* iconvdata/gconv-modules: Add entries for GEORGIAN-PS and
	GEORGIAN-ACADEMY.
	* iconvdata/tst-tables.sh: Add GEORGIAN-PS and GEORGIAN-ACADEMY.

2001-08-03  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/ld-collate (insert_value): If symbol in order
	definition does not exist create it as a sequence without
	associated multibyte and wide representation.

2001-07-30  Roland McGrath  <roland@frob.com>

	* sysdeps/mach/bits/libc-lock.h (__libc_cleanup_region_start): Diddle
	syntax so both function and pointer-to-function arguments work right.

2001-08-03  Tom Rix  <trix@redhat.com>

	* config.h.in: Add HAVE_XCOFF for AIX.
	* configure.in: Add --with-xcoff option.
	* include/libc-symbols.h: Disable the .stabs macros.

2001-08-03  Ulrich Drepper  <drepper@redhat.com>

	* iconvdata/8bit-gap.c: Correctly use __builtin_expect.
	* iconvdata/ansi_x3.110.c: Likewise.
	* iconvdata/big5.c: Likewise.
	* iconvdata/euc-cn.c: Likewise.
	* iconvdata/euc-jp.c: Likewise.
	* iconvdata/euc-kr.c: Likewise.
	* iconvdata/gb18030.c: Likewise.
	* iconvdata/gbbig5.c: Likewise.
	* iconvdata/gbgbk.c: Likewise.
	* iconvdata/gbk.c: Likewise.
	* iconvdata/ibm930.c: Likewise.
	* iconvdata/ibm932.c: Likewise.