@@ -1,3 +1,10 @@
+2001-08-04  Ulrich Drepper  <drepper@redhat.com>
+
+	* libio/fileops.c (_IO_new_file_underflow): Don't call
+	_IO_flush_all_linebuffered.  This isn't required in any standard.
+	Instead flush only stdout.
+	* libio/wfileops.c (_IO_wfile_underflow): Likewise.
+
 2001-08-04  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* dlfcn/Makefile: Add rules for new testcase tststatic.
